[tool.poetry]
name = "safe-ds-stubgen"
version = "0.1.0"
description = "Generation of Safe-DS stubs for Python libraries."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"
readme = "docs/README.md"
repository = "https://github.com/Safe-DS/Stub-Generator"
documentation = "https://stubgen.readthedocs.io"
keywords = ["data-science", "machine-learning", "dsl"]
packages = [
    { include = "safeds_stubgen", from = "src"},
]

[tool.poetry.scripts]
generate-safeds-stubs = "safeds_stubgen.main:main"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
mypy = "^1.4.1"
docstring-parser = "^0.15"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
setuptools = "^68.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-glightbox = "^0.3.1"
mkdocs-material = "^9.1.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
