[tool.poetry]
name = "safe-ds-stubgen"
version = "0.3.0"
description = "Generation of Safe-DS stubs for Python libraries."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"
readme = "docs/README.md"
repository = "https://github.com/Safe-DS/Stub-Generator"
documentation = "https://stubgen.readthedocs.io"
keywords = ["data-science", "machine-learning", "dsl"]
packages = [
    { include = "safeds_stubgen", from = "src"},
]

[tool.poetry.scripts]
safe-ds-stubgen = "safeds_stubgen.main:main"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.6.1"
griffe = ">=0.42,<0.45"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3,<9.0.0"
pytest-cov = ">=4,<6"
syrupy = "^4.6.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-glightbox = "^0.3.1"
mkdocs-material = "^9.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ignore=./tests/data"

[tool.black]
line-length = 120
